stop tag wrap

--- a/client/style.css
+++ b/client/style.css
@@ -62,7 +62,6 @@ h1 {
 }
 .btns {
   display: flex;
-  flex-wrap: wrap;
 }
 .btn {
   font-weight: bold;
